# ServerDaemon

./: CMakeLists.txt  README.md  myservice.sh
daemon/: daemon.cc  daemon.h  daemon.version  main.cpp
