CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(daemon)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/daemon)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src  SOURCES)
#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/contrib  SOURCES)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/daemon  SOURCES)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -g ")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g ")

MESSAGE("building...")

#可执行文件
add_executable(${PROJECT_NAME} ${SOURCES})

